--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -4,17 +4,11 @@
 
 body {
     margin: 0;
-    font-family: "SmileySans","Microsoft Yahei",sans-serif;
+    font-family: "ChillRoundM","Microsoft Yahei",sans-serif;
 }
 
 @font-face {
-    font-family: "MapleMono";
+    font-family: "ChillRoundM";
     src: local(""),
-    url("assets/fonts/MapleMono-Regular.woff2") format("woff2");
-}
-
-@font-face {
-    font-family: "SmileySans";
-    src: local(""),
-    url("assets/fonts/SmileySans-Oblique.ttf.woff2");
+    url("assets/fonts/ChillRoundM.otf");
 }
