--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,14 +1,12 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 body {
-    margin: 0;
-    font-family: "ChillRoundM","Microsoft Yahei",sans-serif;
+  margin: 0;
+  font-family: "ChillRoundM","Microsoft Yahei",sans-serif;
 }
 
 @font-face {
-    font-family: "ChillRoundM";
-    src: local(""),
-    url("assets/fonts/ChillRoundM.otf");
+  font-family: "ChillRoundM";
+  src: local(""),
+  url("assets/fonts/ChillRoundM.otf");
 }
